--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,11 +9,12 @@
 <head profile="http://www.w3.org/1999/xhtml/vocab">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <meta http-equiv="X-UA-Compatible" content="IE=8" />
+<link rel="shortcut icon" type="image/x-icon" href="files/pngs/favicon.ico"/>
 
 <script src="https://use.typekit.net/qeg0qov.js"></script>
 <script>try{Typekit.load({ async: true });}catch(e){}</script>
 
-<link rel="stylesheet" href="css/skrollr.css" />
+<!-- <link rel="stylesheet" href="css/skrollr.css" /> -->
 
 <!-- Begin Foundation  -->
     <link rel="stylesheet" href="css/foundation/foundation.css" />
