--- a/_layouts/orig.html
+++ b/_layouts/orig.html
@@ -9,12 +9,11 @@
 <head profile="http://www.w3.org/1999/xhtml/vocab">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <meta http-equiv="X-UA-Compatible" content="IE=8" />
-<link rel="shortcut icon" type="image/x-icon" href="files/pngs/favicon.ico"/>
 
 <script src="https://use.typekit.net/qeg0qov.js"></script>
 <script>try{Typekit.load({ async: true });}catch(e){}</script>
 
-<!-- <link rel="stylesheet" href="css/skrollr.css" /> -->
+<link rel="stylesheet" href="css/skrollr.css" />
 
 <!-- Begin Foundation  -->
     <link rel="stylesheet" href="css/foundation/foundation.css" />
@@ -26,7 +25,7 @@
 <!-- End Foundation -->
 
 
-  <link rel="stylesheet" type="text/css" href="css/style2.css">
+  <link rel="stylesheet" type="text/css" href="css/style.css">
 
 <meta name="viewport" content="width=device-width, maximum-scale=2, minimum-scale=1, initial-scale=1, user-scalable=yes" />
 </head>
