--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,64 +1,55 @@
-<!DOCTYPE html>
+<!doctype html>
+<html class="no-js" lang="">
+    <head>
+        <meta charset="utf-8">
+        <meta http-equiv="x-ua-compatible" content="ie=edge">
+        <title>Cava Grill | Hello, Hungry People</title>
+        <meta name="description" content="We’re taking roots in LA From our fast-casual restaurants to our products in Whole Foods Markets, we’re so excited to be a part of your SoCal life.">
+        <meta name="viewport" content="width=device-width, maximum-scale=2, minimum-scale=1, initial-scale=1, user-scalable=yes" />
 
-<!--[if lt IE 7 ]> <html class="lt-ie10 lt-ie9 lt-ie8 lt-ie7 ie6" lang="en" xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" dir="ltr" prefix="og: http://opengraphprotocol.org/schema/ content: http://purl.org/rss/1.0/modules/content/ dc: http://purl.org/dc/terms/ foaf: http://xmlns.com/foaf/0.1/ og: http://ogp.me/ns# rdfs: http://www.w3.org/2000/01/rdf-schema# sioc: http://rdfs.org/sioc/ns# sioct: http://rdfs.org/sioc/types# skos: http://www.w3.org/2004/02/skos/core# xsd: http://www.w3.org/2001/XMLSchema#"> <![endif]-->
-<!--[if IE 7 ]>    <html class="lt-ie10 lt-ie9 lt-ie8 ie7" lang="en" xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" dir="ltr" prefix="og: http://opengraphprotocol.org/schema/ content: http://purl.org/rss/1.0/modules/content/ dc: http://purl.org/dc/terms/ foaf: http://xmlns.com/foaf/0.1/ og: http://ogp.me/ns# rdfs: http://www.w3.org/2000/01/rdf-schema# sioc: http://rdfs.org/sioc/ns# sioct: http://rdfs.org/sioc/types# skos: http://www.w3.org/2004/02/skos/core# xsd: http://www.w3.org/2001/XMLSchema#"> <![endif]-->
-<!--[if IE 8 ]>    <html class="lt-ie10 lt-ie9 ie8" lang="en" xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" dir="ltr" prefix="og: http://opengraphprotocol.org/schema/ content: http://purl.org/rss/1.0/modules/content/ dc: http://purl.org/dc/terms/ foaf: http://xmlns.com/foaf/0.1/ og: http://ogp.me/ns# rdfs: http://www.w3.org/2000/01/rdf-schema# sioc: http://rdfs.org/sioc/ns# sioct: http://rdfs.org/sioc/types# skos: http://www.w3.org/2004/02/skos/core# xsd: http://www.w3.org/2001/XMLSchema#"> <![endif]-->
-<!--[if IE 9 ]>    <html class="lt-ie10 ie9" lang="en" xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" dir="ltr" prefix="og: http://opengraphprotocol.org/schema/ content: http://purl.org/rss/1.0/modules/content/ dc: http://purl.org/dc/terms/ foaf: http://xmlns.com/foaf/0.1/ og: http://ogp.me/ns# rdfs: http://www.w3.org/2000/01/rdf-schema# sioc: http://rdfs.org/sioc/ns# sioct: http://rdfs.org/sioc/types# skos: http://www.w3.org/2004/02/skos/core# xsd: http://www.w3.org/2001/XMLSchema#"> <![endif]-->
-<!--[if (gte IE 9)|!(IE)]><!--> <html lang="en" xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" dir="ltr" prefix="og: http://opengraphprotocol.org/schema/ content: http://purl.org/rss/1.0/modules/content/ dc: http://purl.org/dc/terms/ foaf: http://xmlns.com/foaf/0.1/ og: http://ogp.me/ns# rdfs: http://www.w3.org/2000/01/rdf-schema# sioc: http://rdfs.org/sioc/ns# sioct: http://rdfs.org/sioc/types# skos: http://www.w3.org/2004/02/skos/core# xsd: http://www.w3.org/2001/XMLSchema#"> <!--<![endif]-->
+        <link rel="apple-touch-icon" href="favicon.jpg">
+        <!-- Place favicon.ico in the root directory -->
 
-<head profile="http://www.w3.org/1999/xhtml/vocab">
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<meta http-equiv="X-UA-Compatible" content="IE=8" />
-<link rel="shortcut icon" type="image/x-icon" href="files/pngs/favicon.ico"/>
+        <script src="https://use.typekit.net/qeg0qov.js"></script>
+        <script>try{Typekit.load({ async: true });}catch(e){}</script>    
+        <link rel="stylesheet" href="css/foundation/foundation.css" />
+        <link rel="stylesheet" type="text/css" href="css/fonts.css">
+        <link rel="stylesheet" type="text/css" href="css/cavala.css">
+        <script src="js/vendor/modernizr-2.8.3.min.js"></script>
+    </head>
+    <body>
+        <!--[if lt IE 8]>
+            <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
+        <![endif]-->
 
-<script src="https://use.typekit.net/qeg0qov.js"></script>
-<script>try{Typekit.load({ async: true });}catch(e){}</script>
+        <div class="content">
+            {{ content }}
+        </div>  
 
-<!-- <link rel="stylesheet" href="css/skrollr.css" /> -->
+        <script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
+        <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.12.0.min.js"><\/script>')</script>
 
-<!-- Begin Foundation  -->
-    <link rel="stylesheet" href="css/foundation/foundation.css" />
-    <!-- // <script src="/js/vendor/modernizr.js"></script> -->
+        <!-- Foundation 6 -->
+        <script src="js/foundation.min.js"></script>
+        <script>
+          (function ($) { 
+            $(document).foundation();
+          }(jQuery));  
+        </script>
+        <script type="text/javascript" src="js/cavala.js"></script>
+        <script type="text/javascript" src="js/skrollr.min.js"></script>
+        <script type="text/javascript">
+          var s = skrollr.init();
+        </script>
 
-<!-- Master CSS for Energy.gov, including fonts, etc -->
-  <link rel="stylesheet" type="text/css" href="css/fonts.css">
-
-<!-- End Foundation -->
-
-
-  <link rel="stylesheet" type="text/css" href="css/style.css">
-
-<meta name="viewport" content="width=device-width, maximum-scale=2, minimum-scale=1, initial-scale=1, user-scalable=yes" />
-</head>
-
-
-<body>
-    
-    <div class="content">
-      <!-- Begin Merged Markup.html partial Content -->
-      
-        {{ content }}
-
-      <!-- /End Merged Content -->
-    </div>
-
-<!-- Javascript references -->
-    <script src="js/vendor/jquery.min.js"></script>
-
-    <!-- Foundation 6 -->
-    <script src="js/foundation.min.js"></script>
-
-    <!-- Initiate the foundation js -->
-    <script>
-    (function ($) { 
-      $(document).foundation();
-    }(jQuery));  
-    </script>
-  <!-- Scripts (get to work) like script.js -->
-  <script type="text/javascript" src="js/script.js"></script>
-  <script type="text/javascript" src="js/skrollr.min.js"></script>
-    <script type="text/javascript">
-    var s = skrollr.init();
-    </script>
-</body>
+        <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
+        <script>
+            (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
+            function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
+            e=o.createElement(i);r=o.getElementsByTagName(i)[0];
+            e.src='https://www.google-analytics.com/analytics.js';
+            r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
+            ga('create','UA-XXXXX-X','auto');ga('send','pageview');
+        </script>
+    </body>
 </html>
