--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,6 +7,15 @@
         <meta name="description" content="We’re taking roots in LA From our fast-casual restaurants to our products in Whole Foods Markets, we’re so excited to be a part of your SoCal life.">
         <meta name="viewport" content="width=device-width, maximum-scale=2, minimum-scale=1, initial-scale=1, user-scalable=yes" />
 
+        <meta property="og:url"                content="http://cavagrill.la/" />
+        <meta property="og:type"               content="restaurant.restaurant" />
+        <meta property="og:title"              content="Cava Grill | Hello, Hungry People" />
+        <meta property="og:description"        content="We’re taking roots in LA From our fast-casual restaurants to our products in Whole Foods Markets, we’re so excited to be a part of your SoCal life." />
+        <meta property="og:image"              content="files/pngs/social_header.jpg" />
+
+        <meta name="twitter:card" content="summary_large_image">
+        <meta name="twitter:site" content="@cavagrill">
+
         <link rel="apple-touch-icon" href="favicon.jpg">
         <!-- Place favicon.ico in the root directory -->
 
@@ -15,7 +24,6 @@
         <link rel="stylesheet" href="css/foundation/foundation.css" />
         <link rel="stylesheet" type="text/css" href="css/fonts.css">
         <link rel="stylesheet" type="text/css" href="css/cavala.css">
-        <script src="js/vendor/modernizr-2.8.3.min.js"></script>
     </head>
     <body>
         <!--[if lt IE 8]>
