--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,10 +11,12 @@
         <meta property="og:type"               content="restaurant.restaurant" />
         <meta property="og:title"              content="Cava Grill | Hello, Hungry People" />
         <meta property="og:description"        content="We’re taking roots in LA From our fast-casual restaurants to our products in Whole Foods Markets, we’re so excited to be a part of your SoCal life." />
-        <meta property="og:image"              content="files/pngs/social_header.jpg" />
+        <meta property="og:image"              content="http://cavagrill.la/files/pngs/social_header.jpg" />
 
         <meta name="twitter:card" content="summary_large_image">
         <meta name="twitter:site" content="@cavagrill">
+        <meta name="twitter:image" content="http://cavagrill.la/files/pngs/social_header.jpg">
+
 
         <link rel="apple-touch-icon" href="favicon.jpg">
         <!-- Place favicon.ico in the root directory -->
