--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,9 +23,9 @@
 
         <script src="https://use.typekit.net/qeg0qov.js"></script>
         <script>try{Typekit.load({ async: true });}catch(e){}</script>    
-        <link rel="stylesheet" href="css/foundation/foundation.css" />
-        <link rel="stylesheet" type="text/css" href="css/fonts.css">
-        <link rel="stylesheet" type="text/css" href="css/cavala.css">
+        <link rel="stylesheet" href="css/foundation/foundation.min.css" />
+        <!-- <link rel="stylesheet" type="text/css" href="css/cavala.css"> -->
+        <link rel="stylesheet" type="text/css" href="css/cavala.min.css">
     </head>
     <body>
         <!--[if lt IE 8]>
@@ -46,20 +46,12 @@
             $(document).foundation();
           }(jQuery));  
         </script>
-        <script type="text/javascript" src="js/cavala.js"></script>
+        <script type="text/javascript" src="js/cavala.min.js"></script>
         <script type="text/javascript" src="js/skrollr.min.js"></script>
         <script type="text/javascript">
           var s = skrollr.init();
         </script>
 
         <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
-        <script>
-            (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
-            function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
-            e=o.createElement(i);r=o.getElementsByTagName(i)[0];
-            e.src='https://www.google-analytics.com/analytics.js';
-            r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
-            ga('create','UA-XXXXX-X','auto');ga('send','pageview');
-        </script>
     </body>
 </html>
