--- a/css/cavala.css
+++ b/css/cavala.css
@@ -1,3 +1,13 @@
+@font-face{font-family: "NotoSerif-BoldItalic";
+    src:url(fonts/NotoSerif-BoldItalic.ttf)  format('truetype');
+}
+@font-face{font-family: "NotoSerif-Italic";
+    src:url(fonts/NotoSerif-Italic.ttf)  format('truetype');
+}
+@font-face{font-family: "Georgia Cava";
+    src:url(fonts/Georgia.ttf)  format('truetype');
+}
+
 .browserupgrade {
     margin: 0.2em 0;
     background: #ccc;
@@ -206,7 +216,7 @@
     margin-top: -50%;
     width: 110%;
     height: 0;
-    background:url(../files/pngs/02_laSkyline_1800.jpg);
+    background:url(../files/pngs/02_laSkyline_1500.jpg);
     background-repeat: no-repeat;
     background-size: contain;
     padding-top: 165.8%;
@@ -235,7 +245,7 @@
     margin-top: -35%;
     width: 100%;
     height: 0;
-    background:url(../files/pngs/02_laSkyline_1800.jpg);
+    background:url(../files/pngs/02_laSkyline_1500.jpg);
     background-repeat: no-repeat;
     background-size: contain;
     padding-top: 149.8%;
