--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,8 +24,8 @@
         <script src="https://use.typekit.net/qeg0qov.js"></script>
         <script>try{Typekit.load({ async: true });}catch(e){}</script>    
         <link rel="stylesheet" href="css/foundation/foundation.min.css" />
-        <!-- <link rel="stylesheet" type="text/css" href="css/cavala.css"> -->
-        <link rel="stylesheet" type="text/css" href="css/cavala.min.css">
+        <link rel="stylesheet" type="text/css" href="css/cavala.css">
+        <!-- <link rel="stylesheet" type="text/css" href="css/cavala.min.css"> -->
     </head>
     <body>
         <!--[if lt IE 8]>
@@ -46,7 +46,8 @@
             $(document).foundation();
           }(jQuery));  
         </script>
-        <script type="text/javascript" src="js/cavala.min.js"></script>
+        <script type="text/javascript" src="js/cavala.js"></script>
+        <!-- // <script type="text/javascript" src="js/cavala.min.js"></script> -->
         <script type="text/javascript" src="js/skrollr.min.js"></script>
         <script type="text/javascript">
           var s = skrollr.init();
