--- a/css/cavala.css
+++ b/css/cavala.css
@@ -154,6 +154,7 @@
     z-index: 1000;
     width: 100%;
     max-width: 50%;
+    border-radius: 50%;
 }
 
 #meaningful {
@@ -477,6 +478,11 @@
 .bubble img {
     width: 100%;
     z-index: 4000;
+    border-radius: 50%;
+}
+
+#menu-button {
+    border-radius: 0;
 }
 
 #bub1 {left: 10%;top: 5%; width: 30%; }
@@ -683,6 +689,10 @@
     z-index: 11;
 }
 
+#partner-pic-sub {
+    border-radius: 50%;
+}
+
 #partner-info h4 {
     letter-spacing: .3rem;
 }
@@ -796,16 +806,32 @@
 #dips-img-cont {
     position: relative;
     height: 0;
-    padding-top: 100%;
+    padding-top: 85%;
+}
+
+#dips-img-cont2 {
+    margin-top: -100%;
+}
+
+#dip-i {
+    z-index: 1002;
+    position: absolute;
+    background-color: #fff;
+}
+
+.dip-i img {
+    position: relative;
+    z-index: 1003;
+    margin-top: 8%;
 }
 
 #dips-img-cont img {
-    position: relative;
-    z-index: 1002;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    width: 100%;
-    margin-top: -70%;
+    /*position: relative;
+    z-index: 1002;*/
+    /*left: 50%;
+    transform: translate(-50%, -50%);*/
+    /*width: 100%;*/
+    /*margin-top: -70%;*/
 }
 
 #orange2-bar-container {
